src/main/kotlin/com/example/personal_account/errors/FileSizeExceededException.kt
package com.example.personal_account.errors

class FileSizeExceededException(message: String) : RuntimeException(message)